compiler/tests/ar/errors/noret_ret.salam
// لغة: العربية
// توقع: E012
لايرجع دالة مت():
    أرجع
نهاية

دالة الرئيسية:
    مت()
نهاية
